exports[`Choosing controls Choose entry 1`] = `
Array [
  <label
    htmlFor="caldera-forms-entry-chooser-54fds">
    Choose Entry
</label>,
  <select
    className="caldera-forms-entry-chooser"
    id="caldera-forms-entry-chooser-54fds"
    onChange={[Function]}
    value="1">
    <option
        value={null}>
        --
    </option>
    <option
        value="1">
        1
    </option>
    <option
        value="2">
        2
    </option>
</select>,
]
`;

exports[`Choosing controls Choose entry field 1`] = `
Array [
  <label
    className=""
    htmlFor="caldera-forms-entry-field-chooser-54fds">
    Choose Field
</label>,
  <select
    className="caldera-forms-entry-field-chooser"
    id="caldera-forms-entry-field-chooser-54fds"
    onChange={[Function]}
    value="fld_8768091">
    <option
        value={null}>
        --
    </option>
    <option
        value="id">
        ID
    </option>
    <option
        value="datestamp">
        Submitted
    </option>
    <option
        value="fld_8768091">
        First Name
    </option>
    <option
        value="fld_9970286">
        Last Name
    </option>
    <option
        value="fld_6009157">
        Email Address
    </option>
    <option
        value="fld_7683514">
        Comments / Questions
    </option>
</select>,
]
`;

exports[`Choosing controls Choose form 1`] = `
<div>
  <label
    className=""
    htmlFor="caldera-forms-form-chooser-54fds">
    Choose Form
  </label>
  <select
    className="caldera-forms-form-chooser"
    id="caldera-forms-form-chooser-54fds"
    onChange={[Function]}
    value="CF5bde22b646ed0">
    <option>
       -- 
    </option>
    <option
      value="CF5bde22a843265">
      Not Contact Form
    </option>
    <option
      value="CF5bde22b646ed0">
      Contact Form
    </option>
  </select>
</div>
`;

exports[`Choosing controls Choose form when there no forms to choose from 1`] = `
<div>
  <label
    className=""
    htmlFor="caldera-forms-form-chooser-54fds">
    Choose Form
  </label>
  <select
    className="caldera-forms-form-chooser"
    id="caldera-forms-form-chooser-54fds"
    onChange={[Function]}
    value="">
    <option>
       -- 
    </option>
  </select>
</div>
`;

exports[`Choosing controls Choose form with no forms selected 1`] = `
<div>
  <label
    className=""
    htmlFor="caldera-forms-form-chooser-54fds">
    Choose Form
  </label>
  <select
    className="caldera-forms-form-chooser"
    id="caldera-forms-form-chooser-54fds"
    onChange={[Function]}
    value="">
    <option>
       -- 
    </option>
    <option
      value="CF5bde22a843265">
      Not Contact Form
    </option>
    <option
      value="CF5bde22b646ed0">
      Contact Form
    </option>
  </select>
</div>
`;
